CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(convergence_test)

SET(CMAKE_CXX_FLAGS_RELEASE "-mavx -Ofast -DNDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "-mavx -Ofast -DNDEBUG")
SET(CMAKE_CXX_FLAGS_DEBUG "-mavx -O3 -g")
SET(CMAKE_C_FLAGS_DEBUG "-mavx -O3 -g")

FIND_PACKAGE(CppTransport REQUIRED)


INCLUDE_DIRECTORIES(
  ${CPPTRANSPORT_INCLUDE_DIRS}
  ${CMAKE_CURRENT_BINARY_DIR}
)


ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/dquad_core.h ${CMAKE_CURRENT_BINARY_DIR}/dquad_mpi.h
  COMMAND CppTransport -v --fast ${CMAKE_CURRENT_SOURCE_DIR}/dq.model
  DEPENDS dq.model
  DEPENDS ../defaults.model
)


SET(
  DQUAD_HEADERS
  ${CMAKE_CURRENT_BINARY_DIR}/dquad_core.h
  ${CMAKE_CURRENT_BINARY_DIR}/dquad_mpi.h
)


ADD_CUSTOM_TARGET(ConvergenceGenerator DEPENDS ${DQUAD_HEADERS})


ADD_EXECUTABLE(convergence_test convergence_test.cpp)
ADD_DEPENDENCIES(convergence_test ConvergenceGenerator)
TARGET_LINK_LIBRARIES(convergence_test ${CPPTRANSPORT_LIBRARIES})
