CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(gelaton)

SET(CMAKE_CXX_FLAGS_RELEASE "-mavx -Ofast -DNDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "-mavx -Ofast -DNDEBUG")
SET(CMAKE_CXX_FLAGS_DEBUG "-mavx -O3 -g")
SET(CMAKE_C_FLAGS_DEBUG "-mavx -O3 -g")

FIND_PACKAGE(CppTransport REQUIRED)


INCLUDE_DIRECTORIES(
  ${CPPTRANSPORT_INCLUDE_DIRS}
  ${CMAKE_CURRENT_BINARY_DIR}
)


ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/gelaton_core.h ${CMAKE_CURRENT_BINARY_DIR}/gelaton_mpi.h
  COMMAND CppTransport -v --fast ${CMAKE_CURRENT_SOURCE_DIR}/gelaton.model
  DEPENDS gelaton.model
  DEPENDS ../defaults.model
)


SET(
  GELATON_HEADERS
  ${CMAKE_CURRENT_BINARY_DIR}/gelaton_core.h
  ${CMAKE_CURRENT_BINARY_DIR}/gelaton_mpi.h
)


ADD_CUSTOM_TARGET(GelatonGenerator DEPENDS ${GELATON_HEADERS})


ADD_EXECUTABLE(gelaton gelaton.cpp)
ADD_DEPENDENCIES(gelaton GelatonGenerator)
TARGET_LINK_LIBRARIES(gelaton ${CPPTRANSPORT_LIBRARIES})


ADD_EXECUTABLE(gelaton_shape gelaton_shape.cpp)
ADD_DEPENDENCIES(gelaton_shape GelatonGenerator)
TARGET_LINK_LIBRARIES(gelaton_shape ${CPPTRANSPORT_LIBRARIES})


ADD_EXECUTABLE(gelaton_history gelaton_history.cpp)
ADD_DEPENDENCIES(gelaton_history GelatonGenerator)
TARGET_LINK_LIBRARIES(gelaton_history ${CPPTRANSPORT_LIBRARIES})
