CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(step)


SET(CMAKE_CXX_FLAGS_RELEASE "-mavx -Ofast -DNDEBUG")
SET(CMAKE_C_FLAGS_RELEASE "-mavx -Ofast -DNDEBUG")
SET(CMAKE_CXX_FLAGS_DEBUG "-mavx -O3 -g")
SET(CMAKE_C_FLAGS_DEBUG "-mavx -O3 -g")

FIND_PACKAGE(CppTransport REQUIRED)


INCLUDE_DIRECTORIES(
  ${CPPTRANSPORT_INCLUDE_DIRS}
  ${CMAKE_CURRENT_BINARY_DIR}
)


ADD_CUSTOM_COMMAND(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/step_core.h ${CMAKE_CURRENT_BINARY_DIR}/step_mpi.h
  COMMAND CppTransport -v --fast ${CMAKE_CURRENT_SOURCE_DIR}/step.model
  DEPENDS step.model
)


SET(
  STEP_HEADERS
  ${CMAKE_CURRENT_BINARY_DIR}/step_core.h
  ${CMAKE_CURRENT_BINARY_DIR}/step_mpi.h
)


ADD_CUSTOM_TARGET(StepGenerator DEPENDS ${STEP_HEADERS})

ADD_EXECUTABLE(step step.cpp)
ADD_DEPENDENCIES(step StepGenerator)
TARGET_LINK_LIBRARIES(step ${CPPTRANSPORT_LIBRARIES})

ADD_EXECUTABLE(step_shape step_shape.cpp)
ADD_DEPENDENCIES(step_shape StepGenerator)
TARGET_LINK_LIBRARIES(step_shape ${CPPTRANSPORT_LIBRARIES})
